--- a/style.css
+++ b/style.css
@@ -16,6 +16,90 @@ body {
     width: 200px;
 }
 
-.recent-items img{
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    height: 100px;
+}
+
+.user-icon {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background-color: #A1FF68;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 38%;
+}
+
+  .user-icon img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-left: 2px;
+}
+
+.search-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px; 
+}
+
+.search-bar input {
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid #BEBEBE;
+    background-color: #BEBEBE;
+    width: 600px; 
+}
+
+.search-bar button {
+    background-color: #FCB57B;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.search-bar img {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+    margin-left: 2px;
+}
+
+::placeholder {
+    font-family: "Press Start";
+    font-size: 12px;
+    color: black;
+}
+
+.item-section .recent-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 120px;
+    gap: 25px;
+}
+
+.recent-items .item-1, .item-2, .item-3 {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    height: 100%;
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.item-1, .item-2 {
     width: 200px;
+}
+
+.item-3 {
+    width: 182px;
+    height: 100%;
 }
