--- a/style.css
+++ b/style.css
@@ -19,8 +19,16 @@ body {
 .login-register a {
     text-decoration: none;
     color: white;
+    font-size: 10px;
+}
+
+.logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 .logo img {
-    width: 200px;
+    width: 700px;
 }
