--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 .navigation-bar ul {
     list-style-type: none;
     overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(55, 36, 60, 0.5);
 }
 
 .navigation-bar a {
@@ -47,7 +47,8 @@ body {
     padding: 20px;
     display: block;
     text-align: center;
-    font-size: 13px;
+    font-size: 20px;
+    font-family: 'Pixelify Sans';
 }
 
 .navigation-bar li {
@@ -59,7 +60,7 @@ body {
 .bbx-container {
     display: flex;
     justify-content: space-between;
-    background-color: rgba(0, 0, 0, 0.25);
+    background-color: rgba(80, 52, 87, 0.5);
     padding: 5px;
     align-items: center;
 }
@@ -92,8 +93,8 @@ body {
 
 ::placeholder {
     color: #A49F9F;
-    font-family: "Press Start";
-    font-size: 8px;
+    font-family: 'Pixelify Sans';
+    font-size: 13px;
 }
 
 .search-bar button img {
@@ -107,4 +108,32 @@ body {
     height: 30px;
     background-color: #7E618B;
     cursor: pointer;
+}
+
+.players-online {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    padding: 20px;
+    background-color: rgba(95, 76, 100, 0.5);
+}
+
+.players-online img{
+    width: 30px;
+    margin-right: 8px;
+    float: left;
+}
+
+.play-text {
+    font-size: 15px;
+}
+
+.online {
+    font-size: 16px;
+    font-family: 'Pixelify Sans';
+    text-align: left;
+}
+
+.player-count {
+    color: #3AF31C;
 }
