--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 .box-container {
-    background-image: url("/images/BG.png");
+    background-image: url("images/BG.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -156,4 +156,62 @@ body {
     display: inline-block;
     margin-right: 5px;
     margin-left: 3px;
+}
+
+.main-content {
+    padding: 20px;
+    position: absolute;
+    left: 4%;
+    z-index: -1;
+}
+
+.main-content img {
+    width: 485%;
+    height: 250px;
+    border-radius: 5px;
+    filter: blur(5px);
+}
+
+.update-form {
+    background-image: linear-gradient(#866D99, #605779, #583E52);
+    width: 900px;
+    height: 550px;
+    padding: 15px;
+    margin-top: 350px;
+    margin-left: 35px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.header-update {
+    background-image: linear-gradient(#B15CB2, #532849);
+    height: 60px;
+    border-radius: 8px;
+}
+
+.content-top {
+    background-color: #d9d9d9;
+    margin-top: 10px;
+    height: 70px;
+}
+
+.content-box {
+    background-color: #d9d9d9;
+    margin-top: 10px;
+    height: 370px;
+}
+
+.sidebar {
+    background: linear-gradient(to bottom, #A05A99, #7A3375);
+    width: 200px;
+    height: 350px;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.shop-header img {
+    width: 100px;
 }
