--- a/style.css
+++ b/style.css
@@ -167,14 +167,18 @@ body {
 }
 
 .update-form {
+    display: flex;
+    justify-content: space-between;
+}
+
+.content-box {
     background-image: linear-gradient(#866D99, #605779, #583E52);
     width: 900px;
     height: 550px;
     padding: 15px;
     margin-top: 30px;
-    margin-left: 35px;
+    margin-left: 60px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .header-update {
@@ -189,9 +193,27 @@ body {
     height: 70px;
 }
 
-.content-box {
+.content {
     background-color: #d9d9d9;
     margin-top: 10px;
     height: 370px;
 }
 
+.sidebar {
+    margin-top: 100px;
+    margin-right: 120px;
+}
+
+.sidebar img {
+    width: 350px;
+    position: absolute;
+    top: 59%;
+    left: 70.5%;
+}
+
+.shop-content {
+    background-image: linear-gradient(#866D99, #605779, #583E52);
+    width: 310px;
+    height: 400px;
+    border-radius: 8px;
+}
