--- a/signup.css
+++ b/signup.css
@@ -6,7 +6,6 @@ body{
     align-items: center;
     min-height: 100vh;
     font-family: "Press Start 2P", system-ui;
-    /*background: linear-gradient(to bottom, #1b061c, #3c2942, #1b061c);*/
     background-image: url("images/BG.png");
     background-repeat: no-repeat;
     background-position: center;
@@ -28,7 +27,7 @@ body{
     display: none;
 }
 
-.login{
+.signup{
     position: relative;
     width: 100%;
     height: 100%;
@@ -39,7 +38,7 @@ label{
     font-size: 1.9em;
     justify-content: center;
     display: flex;
-    margin: 65.5px;
+    margin: 60px;
     font-weight: bold;
     cursor: pointer;
     transition: .5s ease-in-out;
@@ -57,7 +56,6 @@ input{
     outline: none;
     border-radius: 5px;
 }
-
 button{
     width: 60%;
     height: 40px;
@@ -81,7 +79,7 @@ button:hover{
 
 }
 
-.signup{
+.login{
     height: 460px;
     background-color: #eee;
     border-radius: 60% / 10%;
@@ -89,20 +87,20 @@ button:hover{
     transition: .8s ease-in-out;
 }
 
-.signup label{
+.login label{
     color: #573b8a;
     transform: scale(.6);
 }
 
-#chk:checked ~ .signup{
+#chk:checked ~ .login{
     transform: translateY(-500px);
 }
 
-#chk:checked ~ .signup label{
+#chk:checked ~ .login label{
     transform: scale(1);
 }
 
-#chk:checked ~ .login label{
+#chk:checked ~ .signup label{
     transform: scale(.6);
 }
 
