--- a/style.css
+++ b/style.css
@@ -10,6 +10,29 @@ body {
     color: white;
 }
 
+::-webkit-scrollbar {
+    position: relative;
+    overflow-y: auto;
+    padding-right: 15px;
+  }
+  
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 5px;
+  }
+   
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(#cb79c2, #b76ab7, #a254a2);
+    border-radius: 5px;
+  }
+  
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background-image: linear-gradient(#866D99, #605779, #583E52);
+}
+
 .login-register ul {
     list-style-type: none;
     padding: 10px;
