--- a/about.css
+++ b/about.css
@@ -5,7 +5,9 @@
 }
 
 body {
-    font-family: "Press Start";
+    font-family: "Jersey 25", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     background-color: #18051D;
     color: white;
 }
