--- a/about.css
+++ b/about.css
@@ -5,9 +5,7 @@
 }
 
 body {
-    font-family: "Jersey 25", sans-serif;
-    font-weight: 400;
-    font-style: normal;
+    font-family: "Press Start";
     background-color: #18051D;
     color: white;
 }
@@ -184,6 +182,9 @@ body {
 }
 
 .about-section {
+    font-family: "Jersey 25", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     padding: 40px;
     margin-top: 150px;
     background-color: rgba(55, 36, 60, 0.8);
