--- a/about.css
+++ b/about.css
@@ -208,6 +208,9 @@ body {
 /* Developer Info Styles */
 .developer-info {
     padding: 40px;
+    font-family: "Jersey 25", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .developer-grid {
