--- a/signup.css
+++ b/signup.css
@@ -56,7 +56,7 @@ input{
     outline: none;
     border-radius: 5px;
 }
-button{
+.button{
     width: 60%;
     height: 40px;
     margin: 10px auto;
@@ -74,7 +74,7 @@ button{
     cursor: pointer;
 }
 
-button:hover{
+.button:hover{
     background: #3c2942;
 
 }
