--- a/loginform.css
+++ b/loginform.css
@@ -6,7 +6,6 @@ body{
     align-items: center;
     min-height: 100vh;
     font-family: "Press Start 2P", system-ui;
-    /*background: linear-gradient(to bottom, #1b061c, #3c2942, #1b061c);*/
     background-image: url("images/BG.png");
     background-repeat: no-repeat;
     background-position: center;
@@ -15,11 +14,10 @@ body{
 
 .main {
     width: 350px;
-    height: 500px;
+    height: 600px;
     background-color: #cb79c2;
     background-color: rgba(0, 0, 0, 0.5);
     overflow: hidden;
-    
     border-radius: 10px;
     box-shadow: 5px 20 px 50px #000;
 }
@@ -31,7 +29,7 @@ body{
 .login{
     position: relative;
     width: 100%;
-    height: 93%;
+    height: 95%;
 }
 
 label{
@@ -45,7 +43,11 @@ label{
     transition: .5s ease-in-out;
 }
 
-input{
+.email {
+    margin-top: 100px;
+}
+
+input {
     width: 60%;
     height: 20px;
     background-color: #e0dede;
@@ -82,7 +84,7 @@ input{
 }
 
 .signup{
-    height: 460px;
+    height: 550px;
     background-color: #eee;
     border-radius: 60% / 10%;
     transform: translateY(-180px);
@@ -95,7 +97,7 @@ input{
 }
 
 #chk:checked ~ .signup{
-    transform: translateY(-500px);
+    transform: translateY(-600px);
 }
 
 #chk:checked ~ .signup label{
@@ -109,10 +111,23 @@ input{
 .logo {
     position: absolute;
     left: 50.9%;
-    top: 15%;
+    top: 10%;
     transform: translate(-50%, -50%);
 }
 
 .logo img {
     width: 220px;
+}
+
+.user_input {
+    width: 66%;
+    height: 35px;
+    background-color: #e0dede;
+    justify-content: center;
+    display: flex;
+    margin: 20px auto;
+    padding: 10px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
 }
