--- a/signupform.css
+++ b/signupform.css
@@ -70,7 +70,7 @@ input {
     background: #492967;
     font-size: 1em;
     font-weight: bold;
-    margin-top: 20px;
+    margin-top: 10px;
     outline: none;
     border: none;
     border-radius: 5px;
@@ -80,7 +80,12 @@ input {
 
 .button:hover{
     background: #3c2942;
+}
 
+.button a {
+    color: #fff;
+    text-decoration: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .signup{
@@ -89,6 +94,7 @@ input {
     border-radius: 60% / 10%;
     transform: translateY(-180px);
     transition: .8s ease-in-out;
+    margin-top: 100px;
 }
 
 .signup label{
