--- a/admin/insert_item.css
+++ b/admin/insert_item.css
@@ -2,8 +2,8 @@ body {
     background-color: #18051D;
     font-family: "Press Start";
     color: white;
-    margin: 0;
     padding: 0;
+    margin: 0;
 }
 
 .navbar {
@@ -60,4 +60,32 @@ body {
     margin-top: 70px; /* Adjust according to navbar height */
     padding: 20px;
 }
- 
+
+.content {
+    text-align: center;
+    margin-top: 200px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    border: white;
+}
+
+table, th, td {
+    border: 1px solid white;
+}
+
+th, td {
+    padding: 8px;
+    text-align: center;
+}
+
+form {
+    margin-bottom: 20px;
+}
+
+label {
+    margin-right: 10px;
+}
